# extraction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: USER_MANUAL.md
output/: 1_20250226_114921.json  default_20250226_114921.json  document_summary_20250226_114921.json
sample/docs/: sample_document.docx
sample/output/: document_entities_20250226_101409.csv  document_metadata_20250226_101409.csv  document_sections_20250226_101409.csv  document_summary_20250226_101045.json  sample_document_20250226_101045.json  sample_document_20250226_101402.xml
src/extraction/: __init__.py  __main__.py  cli.py  document_processor.py  extractor.py
tests/: test_cli.py  test_document_processor.py  test_extractor.py
